@@ -1,26 +1,1 @@
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
-<p><br /></p>
 <p><a href="/wiki/en/Special:Edit?topic=Template:Subst:infinite" class="edit" title="Template:Subst:infinite">Template:Subst:infinite</a></p>
