@@ -1,123 +1,123 @@
-<p>1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
+<p>1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i><b>'
-<p>3. <b>1.  Test topic.
-<p>2. 1.  Test topic.</p>
+<p>3. <b>1. Test topic.
+<p>2. 1. Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
@@ -125,31 +125,31 @@
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b>
 <b><i>
-<p>3. <b>1.  Test topic.
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
+<p>3. <b>1. Test topic.
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i><b>'
-<p>3. <b>1.  Test topic.
-<p>2. 1.  Test topic.</p>
+<p>3. <b>1. Test topic.
+<p>2. 1. Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
@@ -157,24 +157,24 @@
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b>
 <i>
-<p>3. <b>1.  Test topic.
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
+<p>3. <b>1. Test topic.
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
+<p>2. 1. Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i><b>'
-<p>3. <b>1.  Test topic.
+<p>3. <b>1. Test topic.
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
